--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Number Guesser</title>
+    <title>Number Guesser Game Project</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="game-container">
       <header>
-        <h1>Number Guesser!</h1>
+        <h1>Number Guesser</h1>
       </header>
       
       <div class="rounds">
